[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/battle_ui.gd" id="1"]

[node name="BattleUI" type="CanvasLayer"]
layer = 10
visible = false
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.2, 0.15, 1)

[node name="EnemyPanel" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.45
anchor_bottom = 0.35

[node name="EnemyName" type="Label" parent="EnemyPanel"]
layout_mode = 2
text = "Wild Chili Drake Lv.5"

[node name="EnemyHPBar" type="ProgressBar" parent="EnemyPanel"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = true

[node name="EnemyStatus" type="Label" parent="EnemyPanel"]
layout_mode = 2
text = ""

[node name="EnemyMesh" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.4
color = Color(0.5, 0.5, 0.5, 1)

[node name="PlayerPanel" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.45
anchor_right = 0.95
anchor_bottom = 0.6

[node name="PlayerCreatureName" type="Label" parent="PlayerPanel"]
layout_mode = 2
text = "Rice Ball Lv.5"

[node name="PlayerHPBar" type="ProgressBar" parent="PlayerPanel"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = true

[node name="PlayerStatus" type="Label" parent="PlayerPanel"]
layout_mode = 2
text = ""

[node name="LogPanel" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.45
anchor_right = 0.5
anchor_bottom = 0.65

[node name="BattleLog" type="RichTextLabel" parent="LogPanel"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "A wild creature appeared!"
scroll_following = true

[node name="ActionPanel" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.68
anchor_right = 0.95
anchor_bottom = 0.95

[node name="MoveGrid" type="GridContainer" parent="ActionPanel"]
layout_mode = 2
columns = 2

[node name="Move1" type="Button" parent="ActionPanel/MoveGrid"]
layout_mode = 2
text = "Move 1"

[node name="Move2" type="Button" parent="ActionPanel/MoveGrid"]
layout_mode = 2
text = "Move 2"

[node name="Move3" type="Button" parent="ActionPanel/MoveGrid"]
layout_mode = 2
text = "Move 3"

[node name="Move4" type="Button" parent="ActionPanel/MoveGrid"]
layout_mode = 2
text = "Move 4"

[node name="BottomButtons" type="HBoxContainer" parent="ActionPanel"]
layout_mode = 2

[node name="FleeButton" type="Button" parent="ActionPanel/BottomButtons"]
layout_mode = 2
text = "Flee"

[node name="SwitchButton" type="Button" parent="ActionPanel/BottomButtons"]
layout_mode = 2
text = "Switch"
